--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <button class="btn btn-danger btn small">My Resume</button>
     </div>
     <div class=" w-25 h-25 mx-auto">
-      <img src="/home/iwin/Desktop/Web Dev/my image.jpg" alt="IWIN" class="w-100 h-100 rounded-circle">
+      <img src="./my image.jpg" alt="IWIN" class="w-100 h-100 rounded-circle">
     </div>
   </section>
   <section  id="skills" class="mt-4 p-4 ">
